<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_login"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@color/white"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/black_333333"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/menu_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/register"
                    android:textColor="@color/theme_red"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="30dp">

                <TextView
                    style="@style/mi_title"
                    android:layout_alignParentBottom="true"
                    android:text="账号登录" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <!--密码登录-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingEnd="30dp"
        android:paddingStart="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:text="+86"
                android:textColor="@color/black_333333" />

            <EditText
                android:id="@+id/et_login_tel"
                style="@style/register_et_style"
                android:layout_marginLeft="20dp"
                android:hint="@string/input_telephone"
                android:inputType="phone" />
        </LinearLayout>

        <View style="@style/line_et_style" />

        <EditText
            android:id="@+id/et_login_password"
            style="@style/register_et_style"
            android:hint="@string/input_password"
            android:inputType="textPassword" />

        <View style="@style/line_et_style" />

        <LinearLayout
            android:id="@+id/ll_login_identify_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="65dp">

                <EditText
                    android:id="@+id/et_login_identify_code"
                    style="@style/register_et_style"
                    android:layout_toLeftOf="@+id/tv_login_send_identify_code"
                    android:hint="@string/identifying_code" />

                <TextView
                    android:id="@+id/tv_login_send_identify_code"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/register_send_identify_code_selector"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/send_identifying_code"
                    android:textColor="@color/black_999999"
                    android:textSize="13sp" />
            </RelativeLayout>

            <View style="@style/line_et_style" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:text="@string/forget_password"
            android:textColor="@color/black_333333"
            android:textSize="12sp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_login"
                style="@style/btn_common_style"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="5"
                android:background="@drawable/common_login_btn_selector"
                android:text="@string/login" />

            <Button
                android:id="@+id/btn_register"
                style="@style/btn_common_style"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="2"
                android:background="@drawable/common_register_btn_selector"
                android:onClick="onClickRegister"
                android:text="@string/register" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>